# MGPoisson2D

./: CMakeLists.txt  MGPoisson2D_gemini.sublime-workspace  README.md
exec/: GNUmakefile  GNUmakefile.gfortran  GNUmakefile.gnu  GNUmakefile.intel  test.f90
libBaseTools/: CMakeLists.txt
libMGPoisson/: CMakeLists.txt  MGPoisson2D.f90
src/: CMakeLists.txt  MGPoisson2D.f90  MGPoisson2D_DD.f90
src/libBaseTools/: CMakeLists.txt  arrayutils.f90  precision.f90
src/libMGPoisson/: CMakeLists.txt  MGPoisson2D.f90  MGPoisson2D_DD.f90  poisson2d.f90
src/tests/: CMakeLists.txt
tests/: CMakeLists.txt  test.f90
